# Ataxx

./: CMakeLists.txt  README.md  main.cpp
Controller/: Arguments.cpp  Arguments.h  MainApp.cpp  MainApp.h  Rules.cpp  Rules.h  arguments.cpp  arguments.h
Controller/exception/: EmptySquare.h  InvalidBoardCoordinates.h  InvalidValue.h  UsedSquare.h  bad_board_coordinates.h  bad_owner.h  empty_square.h  invalid_argument.h  invalid_color.h  invalid_input.h  invalid_value.h  no_more_move.h  not_available_move.h  restart.h  too_many_arguments.h  used_square.h
Model/: Board.cpp  Board.h  Cell.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Subject.cpp  Subject.h
View/: Observer.h  View.h
View/Console/: ConsoleView.cpp  ConsoleView.h
View/Qt/: QtCellButton.h  QtView.cpp  QtView.h
